<resources>
    <string name="app_name">BackupAndRestore</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Backup-->
    <string name="contacts">"Contacts"</string>
    <string name="sms">"Sms"</string>
    <string name="call_log">"Call log"</string>
    <string name="calendar_event">"Calendar event"</string>
    <string name="image">"Image"</string>
    <string name="video">"Video"</string>
    <string name="audio">"Audio"</string>
    <string name="document">"Document"</string>
    <string name="app">"App"</string>
    <string name="action_send">"Send"</string>
    <string name="backup_data_description">"选中数据300KB，预计耗时15s。"</string>

    <!--Restore-->
    <!--AccessibilityService-->
    <string name="accessibility_service_description">"Application automatic installation services."</string>
    <string name="updating_data">"Updating data"</string>
    <string name="updated">"The update is successful"</string>

    <!--DialogFragment-->
    <string name="divider_description" translatable="false">"/"</string>
    <string name="done">Done</string>
</resources>
